--- a/ShoppingApplication/Startseite.html
+++ b/ShoppingApplication/Startseite.html
@@ -11,13 +11,14 @@
 <body class="bg-light">
 
 <div class="container py-4">
-    <h1>Meine Listen</h1>
+    <h1 class="d-flex align-items-center"><img src="img/cart.png" alt="Shoopify Logo" class="mini-logo">Shoopify</h1>
 
     <!-- Button zum Hinzufügen einer neuen Liste -->
     <button class="btn btn-primary" id="addListButton">
         <i class="bi bi-plus-circle"></i> Liste hinzufügen
     </button>
 
+    <h2 class="mt-2">Meine Listen</h2>
     <!-- Aktive Listen -->
     <h3 class="mt-4">Aktive Listen</h3>
     <div id="listContaineractive"></div>
@@ -34,7 +35,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"></script>
 <!-- Main Script (Entry Point) -->
 <script type="module" src="main.js"></script>
-
 
 </body>
 </html>
