--- a/ShoppingApplication/index.html
+++ b/ShoppingApplication/index.html
@@ -11,7 +11,9 @@
 <body class="bg-light">
 
 <div class="container py-4">
-    <h1 class="d-flex align-items-center"><img src="img/cart.png" alt="Shoopify Logo" class="mini-logo">Shoopify</h1>
+    <h1 class="d-flex align-items-center justify-content-center">
+        <img src="img/cart.png" alt="Shoopify Logo" class="mini-logo">Shoopify
+    </h1>
 
     <!-- Button zum Hinzufügen einer neuen Liste -->
     <button class="btn btn-primary" id="addListButton">
